# DataCompression

./: CMakeLists.txt  Makefile  README.md  config.h  dictionary_file.cpp  dictionary_file.h  encode_text.cpp  encode_text.h  main.cpp  max_heap.cpp  max_heap.h  sentence_freq.cpp  sentence_freq.h  trie_dictionary.cpp  trie_dictionary.h  trie_sentence.cpp  trie_sentence.h  trie_single.cpp  trie_single.h  vector_dictionary.cpp  vector_dictionary.h  word_freq.cpp  word_freq.h
Compressor/: 1.txt  1.txt.qzip  HuffmanTree.cpp  HuffmanTree.h  README.md  main.cpp  qompressor.cpp  qompressor.h
documents/: Words Pattern Extraction Design.docx
file/: test.txt
